syntax = "proto3";

package v2;

import "api/v2/vuln_state.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./api/v2;v2";
option java_package = "io.stackrox.proto.api.v2";

enum VulnerabilityType {
  UNKNOWN_VULNERABILITY = 0;
  IMAGE_VULNERABILITY = 1;
  K8S_VULNERABILITY = 2;
  ISTIO_VULNERABILITY = 3;
  NODE_VULNERABILITY = 4;
  OPENSHIFT_VULNERABILITY = 5;
  VIRTUAL_MACHINE_VULNERABILITY = 6;
}

message EmbeddedVulnerability {
  string cve = 1;
  Advisory advisory = 2;
  float cvss = 3;
  string summary = 4;
  string link = 5;
  oneof set_fixed_by {
    string fixed_by = 6;
  }
  CVSSV3 cvss_v3 = 7;
  google.protobuf.Timestamp published_on = 8;
  google.protobuf.Timestamp last_modified = 9;
  // For internal purposes only.
  VulnerabilityType vulnerability_type = 10;
  repeated VulnerabilityType vulnerability_types = 11;
  bool suppressed = 12;
  google.protobuf.Timestamp suppress_activation = 13;
  google.protobuf.Timestamp suppress_expiry = 14;
  // Time when the CVE was first seen, for this specific distro, in the system.
  google.protobuf.Timestamp first_system_occurrence = 15;
  // Time when the CVE was first seen in this image.
  google.protobuf.Timestamp first_image_occurrence = 16;

  VulnerabilitySeverity severity = 17;
  VulnerabilityState state = 18;
  // cvss_metrics stores list of cvss scores from different sources like nvd, Redhat etc
  repeated CVSSScore cvss_metrics = 19;
  float nvd_cvss = 20;
  EPSS epss = 21;
}

enum VulnerabilitySeverity {
  UNKNOWN_VULNERABILITY_SEVERITY = 0;
  LOW_VULNERABILITY_SEVERITY = 1;
  MODERATE_VULNERABILITY_SEVERITY = 2;
  IMPORTANT_VULNERABILITY_SEVERITY = 3;
  CRITICAL_VULNERABILITY_SEVERITY = 4;
}

enum Source {
  SOURCE_UNKNOWN = 0;
  SOURCE_RED_HAT = 1;
  SOURCE_OSV = 2;
  SOURCE_NVD = 3;
}

// EPSS Score stores two epss metrics returned by scanner - epss probability and epss percentile
message EPSS {
  float epss_probability = 1;
  float epss_percentile = 2;
}

message Advisory {
  string name = 1;
  string link = 2;
}

message CVSSScore {
  Source source = 1;
  string url = 2;
  CVSSV3 cvssv3 = 3;
}

message CVSSV3 {
  enum Impact {
    IMPACT_NONE = 0;
    IMPACT_LOW = 1;
    IMPACT_HIGH = 2;
  }
  enum AttackVector {
    ATTACK_LOCAL = 0;
    ATTACK_ADJACENT = 1;
    ATTACK_NETWORK = 2;
    ATTACK_PHYSICAL = 3;
  }
  enum Complexity {
    COMPLEXITY_LOW = 0;
    COMPLEXITY_HIGH = 1;
  }
  enum Privileges {
    PRIVILEGE_NONE = 0;
    PRIVILEGE_LOW = 1;
    PRIVILEGE_HIGH = 2;
  }
  enum UserInteraction {
    UI_NONE = 0;
    UI_REQUIRED = 1;
  }
  enum Scope {
    UNCHANGED = 0;
    CHANGED = 1;
  }
  enum Severity {
    UNKNOWN = 0;
    NONE = 1;
    LOW = 2;
    MEDIUM = 3;
    HIGH = 4;
    CRITICAL = 5;
  }

  string vector = 1;
  float exploitability_score = 2;
  float impact_score = 3;
  AttackVector attack_vector = 4;
  Complexity attack_complexity = 5;
  Privileges privileges_required = 6;
  UserInteraction user_interaction = 7;
  Scope scope = 8;
  Impact confidentiality = 9;
  Impact integrity = 10;
  Impact availability = 11;
  float score = 12;
  Severity severity = 13;
}
