edition = "2023";  // successor to proto2 and proto3

package test;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./test;test";
option java_package = "io.stackrox.proto.test";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message TestCloneSubMessage {
  int32 int32 = 1;
  string string = 2;
}

message TestClone {
  enum CloneEnum {
    UNSET = 0;
    Val1 = 1;
    Val2 = 2;
  }

  repeated int32 int_slice = 1;
  repeated string string_slice = 2;
  repeated TestCloneSubMessage sub_messages = 3;
  map<string, TestCloneSubMessage> message_map = 4 [lazy = true];
  map<string, string> string_map = 5 [lazy = true];
  repeated CloneEnum enum_slice = 6;
  google.protobuf.Timestamp ts = 7;

  oneof primitive {
    int32 int32 = 8;
    string string = 9;
    TestCloneSubMessage msg = 10;
  }
  google.protobuf.Any any = 11;

  map<string, bytes> bytes_map = 12 [lazy = true];
  repeated bytes bytes_slice = 13;
  bytes bytes = 14;
  TestCloneSubMessage sub_message = 15;
}
